--- a/layouts/index.html
+++ b/layouts/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Blog section -->
-    {% comment %} <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
+    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
         <div class="absolute inset-0">
             <div class="bg-gray-200 dark:bg-gray-900/50 h-1/3 sm:h-2/3"></div>
         </div>
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-    </div> {% endcomment %}
+    </div>
 
     {{ if not .Site.Params.Disable_stay_uptodate}}
     <!-- CTA section -->
