--- a/layouts/index.html
+++ b/layouts/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Blog section -->
-    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
+    <!-- <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
         <div class="absolute inset-0">
             <div class="bg-gray-200 dark:bg-gray-900/50 h-1/3 sm:h-2/3"></div>
         </div>
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Tech section -->
     <div class="relative bg-gray-200 dark:bg-gray-900/50 px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 md:mt-12">
@@ -232,22 +232,30 @@
                         </p>
                         {{ end }}
                     </div>
-                    <form action="{{ .Site.Params.P5.Action }}" class="mt-12 sm:mx-auto sm:flex sm:max-w-lg">
+                    <form id="contact" class="mt-12 sm:mx-auto sm:flex sm:max-w-lg">
                         <div class="flex-1 min-w-0">
                             <label for="cta-email" class="sr-only">{{ .Site.Params.P5.Label }}</label>
-                            <input id="cta-email" type="email" class="block w-full px-5 py-3 text-base text-gray-900 placeholder-gray-500 border border-transparent rounded-md shadow-sm focus:border-transparent focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-primary-500" placeholder="{{ .Site.Params.P5.Placeholder }}">
+                            <input id="cta-email" type="email" name="email" class="block w-full px-5 py-3 text-base text-gray-900 placeholder-gray-500 border border-transparent rounded-md shadow-sm focus:border-transparent focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-primary-500" placeholder="{{ .Site.Params.P5.Placeholder }}">
                         </div>
-                        <div class="mt-4 sm:mt-0 sm:ml-3">
+                        <div class="h-0 overflow-hidden m-0 absolute">
+                            <input type="text" id="first-name" name="first_name" class="h-0">
+                        </div>
+                        <div class="mt-4 sm:mt-0 sm:ml-3 gap-1.5 flex">
                             <button type="submit" class="block w-full px-5 py-3 text-base font-medium text-white bg-gray-900 border border-transparent rounded-md shadow hover:bg-black focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-primary-500 sm:px-10">
                                 {{ .Site.Params.P5.Button }}
                             </button>
+                            <div id="spinner" class="hidden animate-spin rounded-full h-6 w-6 border-blue-500 border-8 border-dotted"></div>
                         </div>
                     </form>
+                    <div class="mt-2 sm:mx-auto sm:flex sm:max-w-lg text-white">
+                        <p id="form-submitted" class="hidden">Congratulations! You just made the best decision of your life!</p>
+                        <p id="form-error" class="hidden">An error has occurred.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     {{ end }}
-
+    {{ partial "partials/form.html" . }}
 </main>
 {{ end }}
